--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -16,6 +16,10 @@ chrono = { version = "0.4", features = ["serde"] }
 image = "0.24"
 base64 = "0.21"
 dirs = "5.0"
+reqwest = { version = "0.11", features = ["json"] }
+semver = "1.0"
+flate2 = "1.0"
+tar = "0.4"
 
 [features]
 custom-protocol = ["tauri/custom-protocol"]
